# LiteVCS

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  QUICKSTART.md  readme.md  test.txt  test_code.cpp
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.vcs/: HEAD  index
src/: cli.cpp  cli.h  main.cpp  repository.cpp  repository.h  utils.h
